<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Aqua pHarm</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_item">Action Item</string>
    <string name="action_add">Add Container</string>
    <string name="action_edit">Edit Container</string>
    <string name="action_delete">Delete Container</string>
    <string name="action_save">Save Container</string>
    <string name="action_about">About this Application</string>
    <string name="actionbar_buildsystem">Build System</string>
    <string name="actionbar_fish">Fish</string>
    <string name="actionbar_plants">Plants</string>
    <string name="water_rate_label">Water Pump Flow Rate (GPH):</string>
    <string name="water_capacity_label">Estimated Total Water Capacity:</string>
    <string name="bed_rate_label">Estimated Grow Bed Cycle Rate:</string>
    <string name="container_type">Container Type:</string>
    <string name="container_length">Length (inches):</string>
    <string name="container_width">Width (inches):</string>
    <string name="container_height">Height (inches):</string>
    <string name="container_capacity">Total Capacity:</string>
    <string name="fish_image_description">Fish Image</string>
    <string name="plant_image_description">Plant Image</string>
    <string name="spring_label">Spring:</string>
    <string name="summer_label">Summer:</string>
    <string name="fall_label">Fall:</string>
    <string name="winter_label">Winter:</string>
    <string name="overall_label">Overall:</string>
    <string name="spring_icon">Spring Icon</string>
    <string name="summer_icon">Summer Icon</string>
    <string name="fall_icon">Fall Icon</string>
    <string name="winter_icon">Winter Icon</string>
    <string name="overall_icon">Overall Icon</string>
    <string name="fish_file_name">fish.json</string>
    <string name="plants_file_name">plants.json</string>
    <string name="container_file_name">container.txt</string>
    <string name="api_prehistory">http://api.wunderground.com/api/ebc8bf3dacbbd512/history_</string>
    <string name="api_precoord">/geolookup/q/</string>
    <string name="api_end">.json</string>

</resources>
