<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/linearLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/aquaponics"
    android:orientation="vertical" >
    
    <ImageView 
        android:id="@+id/plantImage"
        android:layout_width="170dp"
        android:layout_height="170dp"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:contentDescription="@string/plant_image_description"
        android:layout_gravity="center" />

    <Spinner
        android:id="@+id/plantSpinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp" />
    
    <LinearLayout 
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp" >
        
        <TextView
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/spring_label"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:layout_gravity="left" />
        
        <ImageView
            android:id="@+id/plantSpringColor"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_weight="0"
            android:contentDescription="@string/spring_icon"
            android:layout_gravity="right" />
        
    </LinearLayout>
    
    <LinearLayout 
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="0dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp" >
        
        <TextView
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/summer_label"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:layout_gravity="left" />
        
        <ImageView
            android:id="@+id/plantSummerColor"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_weight="0"
            android:contentDescription="@string/summer_icon"
            android:layout_gravity="right" />
        
    </LinearLayout>
    
    <LinearLayout 
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="0dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp" >
        
        <TextView
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/fall_label"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:layout_gravity="left" />
        
        <ImageView
            android:id="@+id/plantFallColor"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_weight="0"
            android:contentDescription="@string/fall_icon"
            android:layout_gravity="right" />
        
    </LinearLayout>
    
    <LinearLayout 
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="0dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp" >
        
        <TextView
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/winter_label"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:layout_gravity="left" />
        
        <ImageView
            android:id="@+id/plantWinterColor"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_weight="0"
            android:contentDescription="@string/winter_icon"
            android:layout_gravity="right" />
        
    </LinearLayout>
    
    <LinearLayout 
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="0dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp" >
        
        <TextView
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/overall_label"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:layout_gravity="left" />
        
        <ImageView
            android:id="@+id/plantOverallColor"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_weight="0"
            android:contentDescription="@string/overall_icon"
            android:layout_gravity="right" />
        
    </LinearLayout>
    
    <TextView
        android:id="@+id/plantEatable"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:gravity="center" />

</LinearLayout>

