<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/linearLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/aquaponics"
    android:orientation="vertical" >
    
    <LinearLayout 
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="45dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp" >
        
        <TextView
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:text="@string/container_type"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:layout_gravity="left" />
        
        <TextView 
            android:id="@+id/containerTypeOutput"
            android:layout_width="140dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="40dp"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:gravity="right"
            android:layout_gravity="right" />
        
    </LinearLayout>
    
    <LinearLayout 
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp" >
        
        <TextView
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:text="@string/container_length"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:layout_gravity="left" />
        
        <TextView 
            android:id="@+id/containerlengthOutput"
            android:layout_width="140dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="40dp"
            android:text="36"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:gravity="right"
            android:layout_gravity="right" />
        
    </LinearLayout>
    
    <LinearLayout 
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp" >
        
        <TextView
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:text="@string/container_width"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:layout_gravity="left" />
        
        <TextView 
            android:id="@+id/containerWidthOutput"
            android:layout_width="140dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="40dp"
            android:text="24"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:gravity="right"
            android:layout_gravity="right" />
        
    </LinearLayout>
    
    <LinearLayout 
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp" >
        
        <TextView
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:text="@string/container_height"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:layout_gravity="left" />
        
        <TextView 
            android:id="@+id/containerHeightOutput"
            android:layout_width="140dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="40dp"
            android:text="36"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:gravity="right"
            android:layout_gravity="right" />
        
    </LinearLayout>
    
    <LinearLayout 
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp" >
        
        <TextView
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:text="@string/container_capacity"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:layout_gravity="left" />
        
        <TextView 
            android:id="@+id/containerCapacityOutput"
            android:layout_width="140dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="40dp"
            android:text="134.64 gal."
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:gravity="right"
            android:layout_gravity="right" />
        
    </LinearLayout>

</LinearLayout>
